// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridItem should render correctly 1`] = `
<DocumentFragment>
  <div
    class="artifak__sc-6om8fa-0"
  >
    Grid Item
  </div>
</DocumentFragment>
`;

exports[`GridItemBase should render correctly 1`] = `
<DocumentFragment>
  <div
    class="artifak__sc-6om8fa-0"
  >
    Grid Item Base
  </div>
</DocumentFragment>
`;
